--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1607,7 +1607,7 @@ div.owl-controls, .owl-controls div {
 
 .single-latest-news h3 {
   font-size: 20px;
-  line-height: 1.25em;
+  height: 1.26em;
   font-weight: 600;
 }
 
